# encrypted-file-vault-cli

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: audit-prep.md  code-map.md  next-phase-checklist.md  rc-triage.md  release-candidate-status.md  release-checklist.md  release-notes-0.1.0-rc1-draft.md  release-notes-0.1.0-rc1.md  release-notes-template.md  security-status.md  threat-model.md  usage.md
scripts/: banner.ps1  release-check.ps1  smoke-test.ps1
tests/: conftest.py  test_aes_gcm.py  test_cli.py  test_container_format.py  test_container_hardening.py  test_container_index.py  test_container_io.py  test_hidden_volume.py  test_index_hardening.py  test_kdf.py  test_package.py  test_passphrases.py  test_platform_behavior.py  test_stress_e2e.py  test_vault_rekey.py  test_vault_service.py  test_vault_verify.py  test_wipe.py
vaultcli/: __init__.py  __main__.py  errors.py  passphrases.py  wipe.py
vaultcli/cli/: __init__.py  main.py  output.py  passphrases.py  state.py
vaultcli/cli/commands/: __init__.py  add.py  create.py  extract.py  hidden.py  info.py  list_cmd.py  rekey.py  verify.py  wipe.py
vaultcli/container/: __init__.py  format.py  index.py  reader.py  writer.py
vaultcli/crypto/: __init__.py  aes_gcm.py  kdf.py
vaultcli/vault/: __init__.py  ciphertext.py  hidden.py  models.py  vault.py
