[tool.poetry]
name = "vaultcli"
version = "0.1.0"
description = "Security-focused CLI for encrypted file vaults."
authors = ["Atikul Munna <atikul.munna@northsouth.edu>"]
readme = "README.md"
packages = [{ include = "vaultcli" }]

[tool.poetry.dependencies]
python = "^3.11"
argon2-cffi = "^25.1.0"
cryptography = "^44.0.0"
msgpack = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^7.0.0"
mypy = "^1.18.0"
ruff = "^0.12.0"

[tool.poetry.scripts]
vault = "vaultcli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["vaultcli"]

[[tool.mypy.overrides]]
module = ["argon2.*", "cryptography.*", "msgpack"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
